--- a/display&pseudo.html
+++ b/display&pseudo.html
@@ -15,7 +15,8 @@
     </style>
 </head>
 <body>
-    <h1>Learning HTML CSS</h1>
-    <a href="/display&pseudo.html">Display & pseudo</a>
+    <a href="/">home</a>
+    <h1>Display & pseudo</h1>
+
 </body>
 </html>
