--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 </head>
 <body>
     <h1>Learning HTML CSS</h1>
-    <a href="/display&pseudo.html">Display & pseudo</a>
+    <a href="display&pseudo.html">Display & pseudo</a>
 </body>
 </html>
