--- a/display&pseudo.html
+++ b/display&pseudo.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <a href="/">home</a>
+    <a href="index.html">home</a>
     <h1>Display & pseudo</h1>
 
 </body>
